<resources>
    <string name="app_name">AsiProjet</string>
    <string name="my_sport">My Sport</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="se_connecter">Se connecter</string>
    <string name="retour">Retour</string>
    <string name="motdepasse">rulesofnature</string>
    <string name="nom">Raiden</string>
</resources>