<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@android:color/darker_gray" android:onClick="pagePrecedente">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_sport"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" android:textSize="60sp"
            android:fontFamily="casual" android:layout_marginStart="78dp" android:layout_marginEnd="78dp"
            android:layout_marginTop="46dp" android:layout_marginBottom="593dp" android:id="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/nom_d_utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="267dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="445dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" android:layout_marginEnd="288dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="#263238"/>
    <TextView
            android:text="@string/mot_de_passe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="378dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="334dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" android:layout_marginEnd="291dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="#263238"/>
    <TextView
            android:text="@string/bienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textSize="20sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="162dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="542dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="164dp" android:layout_marginEnd="165dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/se_connecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="481dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="202dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="139dp" android:layout_marginEnd="140dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:text="@string/nom"
            android:ems="10"
            android:id="@+id/editTextText2"
            android:background="#F4F4F4"
            app:layout_constraintBottom_toTopOf="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword5"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword5"/>
    <EditText
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="62dp" android:background="#F4F4F4" android:layout_marginEnd="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintBottom_toTopOf="@+id/button2"
            android:text="@string/motdepasse"/>
    <Button
            android:text="@string/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="682dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="317dp" android:layout_marginEnd="3dp"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="pagePrecedente"/>

</androidx.constraintlayout.widget.ConstraintLayout>